EEVEE-Next: Plane Probe "Display Data" doesn't work properly #119800

Closed
opened 2024-03-22 18:11:38 +01:00 by xZaki · 8 comments

System Information
Operating system: Windows 11
Graphics card: 4060ti

Blender Version
Broken: 4.2.0 Alpha 2024-03-22
Worked: Not sure, but it did work before.

Short description of error

Plane probe does not work at all by default.
(Planar probes are evaluated during raytracing and requires at least screen tracing. So that works as intended and is not considered a bug.)

image

Turning Display Data on shows it in a very buggy way, especially in Material Preview/with a background.

Turning Ray Tracing makes it work properly, albeit with a blurry reflection based on the settings.

image

Turning Display Data and Ray Tracing on makes it flicker between the blurry reflection and the broken one.

Exact steps for others to reproduce the error
Make a simple scene utilizing a Plane Probe and you should see the issue.

**System Information** Operating system: Windows 11 Graphics card: 4060ti **Blender Version** Broken: 4.2.0 Alpha 2024-03-22 Worked: Not sure, but it did work before. **Short description of error** Plane probe does not work at all by default. (Planar probes are evaluated during raytracing and requires at least screen tracing. So that works as intended and is not considered a bug.) ![image](/attachments/58599aff-955a-4d3b-b30b-ec7904891add) Turning Display Data on shows it in a very buggy way, especially in Material Preview/with a background. <video src="/attachments/2fa7a0f3-22db-4524-8fee-a50a99762090" title="blender_UREbiycjYj.mp4" controls></video> Turning Ray Tracing makes it work properly, albeit with a blurry reflection based on the settings. ![image](/attachments/e26e975b-e9e2-4780-91af-2e896085a5dc) Turning Display Data and Ray Tracing on makes it flicker between the blurry reflection and the broken one. <video src="/attachments/3d780b90-3439-4ab8-91cb-ec43f7fbf120" title="blender_bGGWhbDppn.mp4" controls></video> **Exact steps for others to reproduce the error** Make a simple scene utilizing a Plane Probe and you should see the issue.
xZaki added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-03-22 18:11:39 +01:00
Iliya Katushenock added the
Interest
EEVEE & Viewport
label 2024-03-22 18:12:23 +01:00
Member

Just to make the process quicker (and to ensure we are all on the same page): could you please share your example .blend file where this is already set up?

Just to make the process quicker (and to ensure we are all on the same page): could you please share your example .blend file where this is already set up?
Philipp Oeser added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2024-03-25 13:36:13 +01:00
Author

Tried to leave the camera at a position where the reflection freaks out.

Tried to leave the camera at a position where the reflection freaks out.
1005 KiB
Philipp Oeser added
Status
Needs Triage
and removed
Status
Needs Information from User
labels 2024-03-26 09:15:10 +01:00
Member

Seems like planar probes are not reset when viewport changes but seems to only effect the debug option. This part is a bug.
image

Planar probes are evaluated during raytracing and requires at least screen tracing. So that works as intended and is not considered a bug.

Seems like planar probes are not reset when viewport changes but seems to only effect the debug option. This part is a bug. ![image](/attachments/3498fbeb-e5d1-4337-8509-15ad7b245366) Planar probes are evaluated during raytracing and requires at least screen tracing. So that works as intended and is not considered a bug.
1.4 MiB
Philipp Oeser changed title from EEVEE-Next: Plane Probe doesn't work properly to EEVEE-Next: Plane Probe "Display Data" doesn't work properly 2024-03-26 13:55:39 +01:00
Member

Thx checking @Jeroen-Bakker , changed title and description accordingly

Thx checking @Jeroen-Bakker , changed title and description accordingly
Jeroen Bakker added this to the 4.2 LTS milestone 2024-03-26 15:04:12 +01:00
Jeroen Bakker added this to the EEVEE & Viewport project 2024-03-26 15:04:20 +01:00
Member

There is also an issue with the depth test. I could reproduce it when the = display (debug) buffer gets outside the viewport... When this happens the debug view isn't drawn due to failing depth tests.
image

image

There is also an issue with the depth test. I could reproduce it when the = display (debug) buffer gets outside the viewport... When this happens the debug view isn't drawn due to failing depth tests. ![image](/attachments/df9c5ec0-182c-4ff1-8ebb-aff0d62a7589) ![image](/attachments/93b7fcef-66c4-45b2-8959-089b2f081430)
Member

The depth bias issue has been fixed and checked with Clement how to solve this issue.

  • Add planar depth texture to the display shader
  • Add reflection probe data to the display shader
  • In fragment shader sample the depth texture when 1 reflect the world background.
The depth bias issue has been fixed and checked with Clement how to solve this issue. - Add planar depth texture to the display shader - Add reflection probe data to the display shader - In fragment shader sample the depth texture when 1 reflect the world background.
Jeroen Bakker self-assigned this 2024-03-28 12:33:45 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-28 15:16:57 +01:00
Member

@fclem @Jeroen-Bakker : since part of the issue described here was apparently discarded based on false assumptions (that probes always need raytracing enabled), do we need to reopen this?

@fclem @Jeroen-Bakker : since part of the issue described here was apparently discarded based on false assumptions (that probes always need raytracing enabled), do we need to reopen this?

Sorry, I was under the assumption we were talking about sphere light-probes. Planar Light-probes do need raytracing and are not compatible with Blended materials.

Sorry, I was under the assumption we were talking about sphere light-probes. Planar Light-probes do need raytracing and are not compatible with Blended materials.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#119800
No description provided.