Fix #119800: EEVEE-Next: Planar probe debug display

The planar probe display had artifacts. This PR
fixes them by displaying the world when the planar probe
doesn't contain a reflection on that given pixel.

Pull Request: https://projects.blender.org/blender/blender/pulls/120011