source/blender/draw/engines/eevee_next/shaders/infos/eevee_reflection_probe_info.hh
@@ -78,10 +78,16 @@ GPU_SHADER_CREATE_INFO(eevee_display_probe_reflection)
     .fragment_out(0, Type::VEC4, "out_color")
     .do_static_compilation(true);
 
-GPU_SHADER_INTERFACE_INFO(eevee_display_probe_planar_iface, "").flat(Type::INT, "probe_index");
+GPU_SHADER_INTERFACE_INFO(eevee_display_probe_planar_iface, "")
+    .flat(Type::VEC3, "probe_normal")
+    .flat(Type::INT, "probe_index");
 
 GPU_SHADER_CREATE_INFO(eevee_display_probe_planar)
-    .additional_info("eevee_shared", "draw_view", "eevee_lightprobe_planar_data")
+    .push_constant(Type::IVEC4, "world_coord_packed")
+    .additional_info("eevee_shared",
+                     "draw_view",
+                     "eevee_lightprobe_planar_data",
+                     "eevee_reflection_probe_data")
     .storage_buf(0, Qualifier::READ, "PlanarProbeDisplayData", "display_data_buf[]")
     .vertex_source("eevee_display_probe_planar_vert.glsl")
     .vertex_out(eevee_display_probe_planar_iface)
